unpackaged/main/default/objects/Exchequer_Export_Job__c/Exchequer_Export_Job__c.object-meta.xml
<CustomObject>
    <label>Exchequer Export Job</label>
    <nameField>
        <label>Exchequer_Export_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchequer_Export_Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>