unpackaged/main/default/objects/Exchequer_Export_Job__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchases</fullName>
            </value>
            <value>
                <fullName>Engineer Costs</fullName>
            </value>
            <value>
                <fullName>Sales Cash</fullName>
            </value>
            <value>
                <fullName>Sales Credit</fullName>
            </value>
            <value>
                <fullName>Sales Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>